# Finals

./: .gitignore  CMakeLists.txt  README.md
docs/: bit.md
include/: bit.c  bit.h  bit.md  text.h  utils.h
scripts/: build.sh  simulate.sh  test.sh
src/: bin.c  bin.h  bit.c  bwt.c  bwt.h  core.h  correction.c  correction.h  decoder.c  ecc.c  ecc.h  encoder.c  fivot.c  fivot.h  lzss.c  lzss.h  mtf.c  mtf.h  pivot.c  pivot.h  protocol.c  protocol.h  queue.c  queue.h  rle.c  rle.h  text.c  text.h  utils.c  utils.h
test/: test_bwt.c  test_mtf.c  test_rle.c  test_text.c
